--- a/index.html
+++ b/index.html
@@ -21,3 +21,19 @@ href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wgth@0,300;0,40
             title="Youtube video player" frameborder="0"
             allow="accelerometer;autoplay;clipboard-white;encrypted-media;gyroscope;
 picture-in-picture;web-share="
+             referrerpolicy="strict-origin-when-cross-origin"allowfullscreen></iframe>
+        </div>
+    </section>
+<section class="categoria">
+    <h2>Filmes e séries</h2>
+    <div class="categoria-videos">
+        <a href="categoria-videos">
+<img scr="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg"/>
+     </a>
+     <a href="https://www.youtube.com/watch?v=nCmlwcycUJ8">
+        <img scr="https://img.youtube.com/vi/nCmlwcycUJ8/maxresdefault.jpg"/>
+     </a>
+     <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+        <img scr="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg"/>
+    </a>
+    <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
