--- a/index.html
+++ b/index.html
@@ -37,3 +37,13 @@ picture-in-picture;web-share="
         <img scr="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg"/>
     </a>
     <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+        <img scr="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg"/>
+    </a>
+    <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+        <img scr="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg">
+    </a>
+</div>
+</section>
+</body>
+
+</html>
